# calc-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml
.github/workflows/: ci.yml  rust.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs  requests.rs
common/: Cargo.toml
common/src/: lib.rs  trie.rs
common/src/calc/: expr.rs  mod.rs
public-api/: Cargo.toml
public-api/src/: main.rs  requests.rs
shared/: Cargo.toml
shared/src/: avl.rs  calc.rs  lib.rs  trie.rs
shared/src/calc/: expr.rs  token.rs
src/: calc.rs  main.rs  trie.rs
src/calc/: calc.rs  expr.rs  mod.rs  token.rs
src/http/: requests.rs
web/: Cargo.toml  Dockerfile  index.html  index.scss
web-ui/: Cargo.toml  index.html
web-ui/src/: main.rs
web/src/: calculator.rs  counter.rs  main.rs
web/src/calculator/: input_form.rs
web/src/components/: calculator.rs
web2/: Cargo.toml  index.html  index.scss
web2/src/: main.rs
web2/src/components/: calculator.rs
