[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.196"
serde_json = "1.0.113"
itertools = "0.12.1"

[dev-dependencies]
rstest = "0.18.2"
