[workspace]
members = ["common", "web-ui"] #, "public-api"
# resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Edson Hilios"]
description = "A simple calculator implementation"
documentation = "https://github.com/hilios/calc-rs"
edition = "2021"

[workspace.dependencies]
serde = "1.0.196"
serde_json = "1.0.113"
log = "0.4.6"