[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["HtmlInputElement", "HtmlSelectElement"] }